--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -3,10 +3,10 @@ name: Build Sphinx Documentation
 on:
   push:
     branches:
-      - documentacion  # Cambia "main" al nombre de la rama en la que trabajas
+      - documentacion  # Ejecutar en la rama "documentacion"
   pull_request:
     branches:
-      - documentacion  # También se ejecutará en los pull requests a la rama "main"
+      - documentacion
 
 jobs:
   build-docs:
@@ -21,13 +21,13 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9"  # Cambia la versión según lo que necesites
+          python-version: "3.9"
 
-      # 3. Instalar dependencias
+      # 3. Instalar dependencias necesarias
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinx-rtd-theme  # Agrega otras extensiones si las usas
+          pip install sphinx sphinx-rtd-theme
 
       # 4. Construir la documentación
       - name: Build Documentation
@@ -40,4 +40,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build/html  # Ruta donde Sphinx genera la documentación
+          publish_dir: docs/build/html
