--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build Documentation
         run: |
           cd docs
-          make html
+          sphinx-build -b html docs/source docs/build/html
 
       # 5. (Opcional) Publicar en GitHub Pages
       - name: Deploy to GitHub Pages
