--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -32,8 +32,7 @@ jobs:
       # 4. Construir la documentación
       - name: Build Documentation
         run: |
-          cd docs
-          make html
+          sphinx-build -b html docs/source docs/build/html
 
       # 5. (Opcional) Publicar en GitHub Pages
       - name: Deploy to GitHub Pages
